Wersja do ostatecznego szlifu przed drukiem.

--- a/thesis/01Wprowadzenie.tex
+++ b/thesis/01Wprowadzenie.tex
@@ -7,13 +7,13 @@
 \subsection{Problem}
 \label{Chapter111}
 
-Ankieta pozwala na nieinwazyjne, anonimowe i~masowe pozyskiwanie opinii respondentów na zadany temat, a~dzięki zastosowaniu różnych metod statystycznych, także na ocenę zdania całej populacji. W kontekście każdej jednostki, zrzeszającej większą grupę osób, jak zakład pracy, czy jednostka szkolnictwa wyższego, jaką jest Politechnika Poznańska, ankietowanie jest niezwykle potrzebne, celem zapewnienia prawidłowej pracy. Bez~informacji zwrotnej (ang.~\definicja{feedback}) praktycznie nie ma możliwości precyzyjnej analizy poprawności podejmowanych działań, co~w~konkretnych sytuacjach może sprzyjać pojawieniu się niespodziewanej fali problemów. Za~przykład może posłużyć sytuacja, gdy nie posiadając wiedzy o nieodpowiednim (zdaniem studentów i prowadzących zajęcia) wyposażeniu sali laboratoryjnej, władze uczelni ustalają harmonogram zajęć, zwiększający obciążenie tego pomieszczenia, co~byłoby w tej sytuacji niewskazane. \\
+Ankieta\footnote{\cite{Wiki:BA}\cite{IP:Awbi}} pozwala na nieinwazyjne, anonimowe i~masowe pozyskiwanie opinii respondentów na zadany temat, a~dzięki zastosowaniu różnych metod statystycznych, także na ocenę zdania całej populacji. W kontekście każdej jednostki, zrzeszającej większą grupę osób, jak zakład pracy, czy jednostka szkolnictwa wyższego, jaką jest Politechnika Poznańska, ankietowanie jest niezwykle potrzebne, celem zapewnienia prawidłowej pracy. Bez~informacji zwrotnej (ang.~\definicja{feedback}) praktycznie nie ma możliwości precyzyjnej analizy poprawności podejmowanych działań, co~w~konkretnych sytuacjach może sprzyjać pojawieniu się niespodziewanej fali problemów. Za~przykład może posłużyć sytuacja, gdy nie posiadając wiedzy o zapotrzebowaniach studentów, władze uczelni dokonują nieprawidłowego zakupu, np.~oprogramowania do~sali laboratoryjnej. Innym przykładem mogą być ankiety przeprowadzane bezpośrednio po zajęciach -- dzięki nim, prowadzący może poznać preferencje studentów odnośnie tego, które części wykładu były najbardziej interesujące, a które powinny zostać dopracowane. \\
 
 W ostatnich latach\footnote{Mowa o~okresie 2008-2013, który jest znany autorom niniejszej Pracy Dyplomowej.} Politechnika Poznańska posiadała szerokie spektrum narzędzi do pozyskiwania wiedzy o~swoim działaniu i~oferowanych usługach, funkcjonujących w zgodzie ze Statutem Politechniki Poznańskiej\footnote{Zapis dotyczący dokonywania oceny nauczyciela akademickiego z~uwzględnieniem oceny studentów\cite{AP:SPP11}.}. Niestety, gros~z~nich wzajemnie się wykluczał. Przykładowy student na Wydziale Informatyki\footnote{Do 2010 roku -- Wydziale Informatyki i~Zarządzania} poddawany był ankietom: elektronicznym na~poziomie Uczelni oraz Wydziału, ,,papierowym'' na~poziomie Uczelni oraz~Samorządu Studentów, a~ponadto, dodatkowej ankietyzacji w~ramach niektórych zajęć dydaktycznych. \\
 
 Żaden spośród tych ,,systemów'' ankietyzacji nie posiadał odpowiednich zabezpieczeń, wymaganych do~zapewnienia wymierności ich wyników (jak np.~zagwarantowanie, aby~nikt nie wziął w~ankiecie udziału więcej niż jeden raz, czy~uniemożliwienie wypełnienia ankiety przeznaczonej dla~innego wydziału, kierunku). Brak wymiernych efektów udziału w tych badaniach, podobnie jak~ich mnogość i dezorientacja związana z~pytaniem ,,kto tak naprawdę pozyskuje informacje'', działały tu na~niekorzyść ankietujących. \\
 
-\textit{Ustawa o~Szkolnictwie Wyższym} wymaga od~uczelni wyższych badania nie tylko aktualnej społeczności studenckiej, lecz~także jej absolwentów\cite{AP:PoSW05}. Sprawdzane powinny być takie czynniki, jak rozwój karier czy satysfakcja z zapewnianych usług. Niestety, na~Politechnice Poznańskiej brakuje odpowiednich narzędzi do prowadzenia tego rodzaju analiz, w~szczególności, że~dotychczasową grupą docelową wszelkich badań i ankiet byli jedynie aktualni studenci. Nawiązując więc do~wcześniejszych twierdzeń, w~konsekwencji niespełnienia wymagań określonych w Ustawie i~braku odpowiednich mechanizmów prowadzenia badań, mogłoby zaistnieć prawdopodobieństwo wystąpienia spadku jakości usług świadczonych przez uczelnię, a~co za tym idzie, także jej prestiżu.
+\textit{Ustawa o~Szkolnictwie Wyższym} wymaga od~uczelni wyższych badania nie tylko aktualnej społeczności studenckiej, lecz~także jej absolwentów\footnote{\cite{AP:PoSW05}}. Sprawdzane powinny być takie czynniki, jak rozwój karier czy satysfakcja z zapewnianych usług. Niestety, na~Politechnice Poznańskiej brakuje odpowiednich narzędzi do prowadzenia tego rodzaju analiz, w~szczególności, że~dotychczasową grupą docelową wszelkich badań i ankiet byli jedynie aktualni studenci. Nawiązując więc do~wcześniejszych twierdzeń, w~konsekwencji niespełnienia wymagań określonych w Ustawie i~braku odpowiednich mechanizmów prowadzenia badań, mogłoby zaistnieć prawdopodobieństwo wystąpienia spadku jakości usług świadczonych przez uczelnię, a~co za tym idzie, także jej prestiżu.
 
 \subsection{Proponowane rozwiązanie}
 \label{Chapter112}
@@ -27,7 +27,7 @@ Aby~zapewnić, że~pozyskane w~badaniach dane są~prawidłowe, w~proponowanym ro
 \section{Ograniczenia i zagrożenia dla projektu}
 \label{Chapter12}
 
-W zależności od punktu widzenia, z jakiego projekt iQuest podda się analizie, wskazać można różne zestawy ograniczeń i zagrożeń dla jego realizacji. Dla przykładu, rozpatrując tę kwestię ze strony klienta, ważna może być kwestia zachęty studentów i absolwentów Uczelni do korzystania z systemu. Dla zespołu programistów, którzy są jednocześnie autorami niniejszej pracy dyplomowej, będzie to sprawa poboczna, niezwiązana z realizacją wymagań funkcjonalnych\footnote{Rozdział \ref{Chapter3}. - Wymagania funkcjonalne.}. Zdecydowano więc o analizie jedynie ograniczeń i zagrożeń związanych ze stroną implementacyjną projektu, przy uwzględnieniu następujących definicji:
+W zależności od punktu widzenia, z jakiego projekt \textit{iQuest} podda się analizie, wskazać można różne zestawy ograniczeń i zagrożeń dla jego realizacji. Dla przykładu, rozpatrując tę kwestię ze strony klienta, ważna może być kwestia zachęty studentów i absolwentów Uczelni do korzystania z systemu. Dla zespołu programistów, którzy są jednocześnie autorami niniejszej pracy dyplomowej, będzie to sprawa poboczna, niezwiązana z realizacją wymagań funkcjonalnych\footnote{Rozdział \ref{Chapter3}. - Wymagania funkcjonalne.}. Zdecydowano więc o analizie jedynie ograniczeń i zagrożeń związanych ze stroną implementacyjną projektu, przy uwzględnieniu następujących definicji:
 \begin{description}
 \item[Ograniczenie] -- granica, której przekroczenie jest niemożliwe lub zakazane. Obejmuje np. ograniczenia technologiczne oraz narzucone z góry przez osoby o kompetencjach decyzyjnych w kwestiach związanych z projektem.
 \item[Zagrożenie] -- sytuacja lub fakt mogący negatywnie wpłynąć na realizację projektu.
@@ -36,14 +36,14 @@ W zależności od punktu widzenia, z jakiego projekt iQuest podda się analizie,
 \subsection{Ograniczenia}
 \label{Chapter121}
 
-System iQuest realizowany jest na zlecenie Dziekana Wydziału Informatyki. Z tego względu, musi on podlegać szerokiemu spektrum wymagań ze strony takich organów, jak DRO (\definicja{Dział Rozwoju Oprogramowania}). Jednym z nich jest konieczność stosowania rozwiązań ,,otwartych'' (ang. \definicja{open}) oraz ,,wolnych'' (ang. \definicja{free}). Znacząco zawęża to możliwe do zastosowania technologie i zasoby. \\
+System \textit{iQuest} realizowany jest na zlecenie Dziekana Wydziału Informatyki. Z tego względu, musi on podlegać szerokiemu spektrum wymagań ze strony takich organów, jak DRO (\definicja{Dział Rozwoju Oprogramowania}). Jednym z nich jest konieczność stosowania rozwiązań ,,otwartych'' (ang. \definicja{open}) oraz ,,wolnych'' (ang. \definicja{free}). Znacząco zawęża to możliwe do zastosowania technologie i zasoby. \\
 
-Za poboczne ograniczenie można uznać z góry narzucony harmonogram prac. Zespół programistów realizował tego rodzaju projekt po raz pierwszy, stąd nie było dla niego łatwym zweryfikowanie możliwości jego wykonania.
+Za poboczne ograniczenie można uznać z góry narzucony harmonogram prac. Zespół programistów mógł składać się z nie więcej niż 4 osób, co ogranicza liczbę możliwych do przepracowania roboczogodzin. Uwzględniając przy tym, że zespół ten realizował tego typu zadanie po raz pierwszy, weryfikacja możliwości realizacji tego harmonogramu nie była prosta.
 
 \subsection{Zagrożenia}
 \label{Chapter122}
 
-Zagrożeniem dla projektu mógł być brak wcześniejszego doświadczenia zespołu przy realizacji tego rodzaju projektów. W początkowych fazach projektu sądzono więc, że nieznajomość technologii może przyczynić się do powstania ciężkich do przekroczenia barier. Jak się jednak okazało, powyższe zagrożenie okazało się mało istotne, gdyż zespół dynamicznie przystosowywał się do sytuacji, brak doświadczenia nadrabiając umiejętnością szybkiej nauki. \\
+Zagrożeniem dla projektu mógł być brak wcześniejszego doświadczenia zespołu przy realizacji tego rodzaju projektów. W początkowych fazach projektu sądzono więc, że nieznajomość technologii może przyczynić się do powstania ciężkich do przekroczenia barier. Jak się jednak okazało, powyższe zagrożenie okazało się mało istotne, gdyż zespół dynamicznie przystosowywał się do sytuacji, brak doświadczenia nadrabiając umiejętnością szybkiej nauki. Pomimo tego, w dalszym ciągu, wykonawcy pozostają studentami Politechniki Poznańskiej, a nie wyspecjalizowaną grupą płatnych fachowców, co nadal mogło zaważyć na jakości wytworzonego oprogramowania. \\
 
 W nawiązaniu do powyższego zagrożenia, na drodze programistów stała jednak jedna poważna przeszkoda -- niekompletność dokumentacji dotyczącej niektórych systemów i technologii zastosowanych w projekcie. \\
 
@@ -69,7 +69,7 @@ Celem projektu \textit{iQuest} jest zbudowanie systemu umożliwiającego łatwe 
 \item{przy tworzeniu i hierarchizacji grup respondentów}
 \item{przy zachęcaniu do uczestnictwa w niej przez potencjalnych Respondentów}
 \end{itemize}}
-\item{oferować rozbudowane możliwości raportowania}
+\item{integrować się z uczelnianym systemem raportowania}
 \item{odciążyć pracowników uczelni oraz Samorząd Studentów z obowiązków związanych z przeprowadzaniem konwencjonalnych (,,papierowych'') ankiet}
 \end{itemize}
 
@@ -80,14 +80,14 @@ Projekt realizowany jest w ramach SDS (ang. \definicja{Software Development Stud
 
 Szczegóły odnośnie osób realizujących projekt znajdują się w dodatku \ref{Chapter10}. Poniżej przedstawiono wykaz kompetencji poszczególnych zespołów:
 \begin{description}
-\item[Zespół zarządzający] -- obejmuje dwóch studentów, pełniących role \emph{kierownika projektu} oraz \emph{architekta}. Kompetencje:
+\item[Zespół zarządzający] -- dwóch studentów, pełniących w głównej mierze role \emph{kierownika projektu} oraz \emph{architekta}, ale także wykonujący obowiązki \emph{analityka}. Kompetencje:
 \begin{itemize}
 \item Kontakt bezpośredni z klientem oraz jego przedstawicielami
 \item Decydowanie o kierunku rozwoju projektu (w tym: wybór technologii, rozwiązań, itp.)
 \item Utworzenie dokumentacji architektury projektu
 \item Tworzenie i przydzielanie zadań do zespołu programistów
 \end{itemize}
-\item[Zespół programistów] -- obejmuje czterech studentów, pełniących role \emph{programistów}. Kompetencje:
+\item[Zespół programistów] -- czterech studentów, pełniących role \emph{programistów}. Kompetencje:
 \begin{itemize}
 \item Przyjmowanie i realizacja zadań przydzielonych zespołowi
 \item Zgłaszanie problemów z implementacją założeń architektonicznych
