--- a/thesis/04Pozafunkcjonalne.tex
+++ b/thesis/04Pozafunkcjonalne.tex
@@ -7,7 +7,7 @@
 W niniejszym rozdziale zostaną zaprezentowane i krótko opisane wymagania pozafunkcjonalne dotyczące systemu \textit{iQuest}. Dodatkowo, zostały one przydzielone do wybranych przez zespół zarządzający charakterystyk oprogramowania.
 
 \section{Opis wymagań}
-\label{Chapter43}
+\label{Chapter42}
 
 Wymagania pozafunkcjonalne przypisane do wyżej opisanych charakterystyk oprogramowania przedstawione zostały w tabeli \ref{tab:reqs}. Dodatkowo, określono za pomocą etykiety \emph{ważność (W)} oraz \emph{trudność implementacji (TI)} dla każdego z wymagań. Wartości w ramach tego oznaczenia wyrażone są w następującej skali:
 
@@ -116,12 +116,8 @@ Zużycie zasobów & Możliwość pracy przez ankietera\slash respondenta na śre
 \end{longtable}
 \end{center}
 
-Zważywszy, że projekt ten jest istotny dla Uczelni, dołożono wszelkich starań, aby spełnić wszystkie wymagania pozafunkcjonalne. Zadanie to zostało w sporej części wykonane dzięki zastosowaniu sprawdzonego i znanego narzędzia w roli podstawy dla całego systemu. Mowa o platformie \textit{Moodle}\footnote{Więcej informacji w rozdziale~\ref{Chapter6}, poświęconym implementacji i zastosowanym przy niej technologiom.}. Użycie jej pozwoliło m.in. na zapewnienie pełnej modułowości systemowi, dzięki czemu wprowadzanie jakichkolwiek zmian w dowolnej jego części jest uproszczone i nie wpływa na resztę kodu. Spełniona została także adaptatywność i przenośność systemu, oparta na uniwersalności języka \textit{PHP}, jak też szerokiej gamie obsługiwanych przez \textit{Moodle} systemów baz danych. \\
+Zważywszy, że projekt ten jest istotny dla Uczelni, dołożono wszelkich starań, aby spełnić wszystkie wymagania pozafunkcjonalne. Zadanie to zostało w sporej części wykonane dzięki zastosowaniu sprawdzonego i znanego narzędzia w roli podstawy dla całego systemu. Mowa o platformie \textit{Moodle}\footnote{Więcej informacji w rozdziale~\ref{Chapter6}, poświęconym implementacji i zastosowanym przy niej technologiom.}. Użycie jej pozwoliło m.in.~na zapewnienie modułowości systemowi. Spełniona została także adaptatywność i przenośność systemu, oparta na uniwersalności języka \textit{PHP}, jak też szerokiej gamie obsługiwanych przez \textit{Moodle} systemów baz danych. \\
 
-Zalety wykorzystania tak powszechnej technologii są jednak znacznie szersze. \textit{Moodle} posiada swój własny standard kodowania, którego przy realizowaniu projektu starano się w pełni przestrzegać. To sprawia, że w połączeniu z wytycznymi \textit{DRO} (\definicja{Dział Rozwoju Oprogramowania Politechniki Poznańskiej}), dokumentacją \textit{Moodle} i dokumentacją systemu \textit{iQuest}, nakład pracy wymagany do wdrożenia się, celem rozwoju projektu, został zminimalizowany. \\
+Zalety wykorzystania tak powszechnej technologii były -- przynajmniej w teorii -- znacznie szersze. \textit{Moodle} posiada swój własny standard kodowania, którego przy realizowaniu projektu starano się w pełni przestrzegać. To sprawia, że w połączeniu z wytycznymi \textit{DRO} (\definicja{Dział Rozwoju Oprogramowania Politechniki Poznańskiej}), dokumentacją \textit{Moodle} i dokumentacją systemu \textit{iQuest}, nakład pracy wymagany do wdrożenia się, celem rozwoju projektu, został zmniejszony. \\
 
-Warto zaznaczyć, że w trakcie prac nad projektem, bardzo silny nacisk stawiano na prawidłowe zarządzanie uprawnieniami użytkowników. Są one weryfikowane przy każdym działaniu podejmowanym przez użytkowników. Zależą one od przydzielonej im w systemie roli. Szczegóły tej kwestii swobodnie definiować może administracja. Ważnym jest, że osoby o roli ankietera mogą modyfikować i analizować jedynie utworzone przez siebie, lub udostępnione im bezpośrednio, badania. Podobnie działają uprawnienia przydzielone do roli respondenta -- pozwalając dokładnie jeden raz odpowiedzieć na pytania w ankietach skierowanych do grup docelowych, do których należy użytkownik. \\
-
-W trakcie testów na urządzeniu przenośnym typu netbook\footnote{\textit{Asus Automobili Lamborghini VX6}, CPU: \textit{Intel Atom D525} 1,7GHz, RAM: 4GB, HDD: 320GB 5400 RPM, Środowisko: korzystający z \definicja{WUBI} system \definicja{Ubuntu 12.04 LTS}.} pełniącym rolę serwera \textit{HTTP}, serwera bazy danych oraz klienta systemu jednocześnie, cały proces instalacji nie przekraczał 40 minut. Zaobserwowanym głównym czynnikiem ograniczającym wydajność procesu była szybkość środowiska wirtualnego oraz zastosowanego dysku twardego.
-
-%Wywaliłem weryfikację wymagań. Nie wiem co tu napisać - mamy bowiem zrobione to jedynie na zasadzie: "jest?" "jest!". I tyle. Nikt nic nie testował aż tak dokładnie w tej kwestii, nie?
+W trakcie prac nad projektem, niemały nacisk stawiano na prawidłowe zarządzanie uprawnieniami użytkowników. Wykorzystano w tym celu mechanizmy dostępne w platformie \textit{Moodle}. Są one weryfikowane przy każdym działaniu podejmowanym przez użytkowników i zależą od przydzielonej im w systemie roli. Szczegóły tej kwestii swobodnie definiować może administracja. Ważnym jest, że osoby o roli ankietera mogą modyfikować i analizować jedynie utworzone przez siebie, lub udostępnione im bezpośrednio, badania. Podobnie działają uprawnienia przydzielone do roli respondenta -- pozwalając dokładnie jeden raz odpowiedzieć na pytania w ankietach skierowanych do grup docelowych, do których należy użytkownik.
