--- a/thesis/10Dodatki.tex
+++ b/thesis/10Dodatki.tex
@@ -52,8 +52,8 @@ Odpowiedzialność za utworzenie treści niniejszej pracy dyplomowej została pr
 
 \begin{itemize}
 \item Rozdział 6.2.3; 6.2.4 -- Napotkane problemy i ich rozwiązania -- Inicjalizacja bazy danych; Inicjalizacja modułu
-\item Rozdział 6.3.11 -- Użyte technologie - JavaScript
-\item Rozdział 8 -- Wnioski - część własna
+\item Rozdział 6.3.11 -- Użyte technologie -- JavaScript
+\item Rozdział 8 -- Wnioski -- część własna
 \end{itemize}
 \noindent
 
@@ -95,11 +95,9 @@ Odpowiedzialność za część implementacyjną systemu została przedstawiona p
 \item Krzysztof Marian Borowiak
 
 \begin{itemize}
-\item Testy jednostkowe (wydanie 1)
-\item Testy akceptacyjne
+\item Testy jednostkowe i akceptacyjne
 \item Dokumentacja dla Użytkownika Końcowego (Administratora, Użytkownika)
-\item Raport funkcjonowania na różnych platformach mobilnych
-\item Raport funkcjonowania w różnych przeglądarkach internetowych
+\item Dokumentacja techniczna (raporty dot. funkcjonowania na platformach mobilnych oraz w różnych środowiskach)
 \end{itemize}
 \noindent
 
@@ -107,7 +105,6 @@ Odpowiedzialność za część implementacyjną systemu została przedstawiona p
 
 \begin{itemize}
 \item Interfejs użytkownika
-\item Powiązanie interfejsu z logiką
 \item Utworzenie Bazy Danych
 \end{itemize}
 \noindent
@@ -124,16 +121,17 @@ Odpowiedzialność za część implementacyjną systemu została przedstawiona p
 
 \begin{itemize}
 \item Logika
-\item Testy jednostkowe (wydanie 2)
+\item Testy jednostkowe
 \item System raportowania
-\item Obsługa Bazy Danych
 \end{itemize}
 \noindent
 
 \end{description}
 
 %\noindent
-Serdeczne podziękowania należą się zespołowi zarządzającemu, przygotowane przez który materiały, choć wymagające znaczącej redakcji, pomogły w utworzeniu niniejszej pracy dyplomowej.
+Serdeczne podziękowania należą się Promotorowi niniejszej pracy dyplomowej, dr inż. Bartoszowi Walterowi, który  wytrwale wspierał autorów przy realizacji ich zadań. Podobnie, podziękowania należą się prowadzącemu przedmiot ,,Pracownia inżynierska'', dr inż. Grzegorzowi Pawlakowi, aktywnie motywującego zespół do wytężonej pracy. \\
+
+Dodatkowe podziękowania należą się zespołowi zarządzającemu, przygotowane przez który materiały, choć wymagające znaczącej redakcji, pomogły w utworzeniu niniejszej pracy dyplomowej. Autorzy niniejszej pracy dyplomowej chcieliby także podziękować opiekunom \textit{SDS}, w tym w szczególności mgr inż. Sylwii Kopczyńskiej, za niewyczerpaną wiarę w ich (w rozumieniu: zespołu programistów) możliwości.
 
 \section{Wykaz użytych narzędzi i technologii}
 \label{ChapterA4}
