--- a/thesis/11DodatkiB.tex
+++ b/thesis/11DodatkiB.tex
@@ -1,4 +1,37 @@
 \chapter{Wygląd aplikacji}
 \label{Chapterb1}
 
-{\color{red}Tu będą zrzuty ekranowe z systemu iQuest, zamieszczone w instrukcji. Na chwilę obecną, zrzuty są dopiero wykonywane (trwają prace nad systemem).}
+\begin{figure}[H]
+\centering\includegraphics[width=0.9\textwidth]{figures/kb/W2-logowanie}
+\caption{Logowanie do systemu \textit{iQuest}}\label{rys:Logowanie}
+\end{figure}
+
+\begin{figure}[H]
+\centering\includegraphics[width=0.9\textwidth]{figures/kb/W2-stronaglowna}
+\caption{Strona główna systemu \textit{iQuest} -- widok ankietera}\label{rys:StronaGlowna}
+\end{figure}
+
+\begin{figure}[H]
+\centering\includegraphics[width=0.9\textwidth]{figures/kb/W2-dodawaniebadania}
+\caption{Dodawanie badania w systemie \textit{iQuest}}\label{rys:DodawanieBadania}
+\end{figure}
+
+\begin{figure}[H]
+\centering\includegraphics[width=0.9\textwidth]{figures/kb/W2-tworzenieankiety}
+\caption{Tworzenie ankiety w systemie \textit{iQuest} -- wybór typu pytania}\label{rys:TworzenieAnkiety}
+\end{figure}
+
+\begin{figure}[H]
+\centering\includegraphics[width=0.9\textwidth]{figures/kb/W2-tworzenieankiety2}
+\caption{Tworzenie ankiety w systemie \textit{iQuest} -- modyfikacja pytania}\label{rys:TworzenieAnkiety2}
+\end{figure}
+
+\begin{figure}[H]
+\centering\includegraphics[width=0.9\textwidth]{figures/kb/W2-wyborbadania}
+\caption{Lista badań dostępna dla respondenta}\label{rys:WyborBadania}
+\end{figure}
+
+\begin{figure}[H]
+\centering\includegraphics[width=0.9\textwidth]{figures/kb/W2-odpowiadanienanakiete}
+\caption{Interfejs ankiety dla respondenta}\label{rys:OdpowiadanieNaAnkiete}
+\end{figure}
