--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -1,13 +1,13 @@
 @misc{AP:PoSW05,
-title =			{{Ustawa z dnia 27 lipca 2005 r. -- Prawo o szkolnictwie wyższym}},
-note =			{{Dz. U. Nr 164, poz. 1365, z późn. zm., Art. 13a.}},
-year =			{{2005}}
+title = {{Ustawa z dnia 27 lipca 2005 r. -- Prawo o szkolnictwie wyższym}},
+note = {{Dz. U. Nr 164, poz. 1365, z późn. zm., Art. 13a.}},
+year = {{2005}}
 }
 
 @misc{AP:SPP11,
-title =			{{Statut Politechniki Poznańskiej}},
-note =			{{Uchwała Nr 154, \textsection{83}, ust. 5}},
-year =			{{2011}}
+title = {{Statut Politechniki Poznańskiej}},
+note = {{Uchwała Nr 154, \textsection{83}, ust. 5}},
+year = {{2011}}
 }
 
 @unpublished{Redmine:ProjDocs,
@@ -64,7 +64,7 @@ howpublished = {[on-line] \url{http://seleniumhq.org/docs}}
 @misc{Man:Ubuntu,
 title =			{{Official Ubuntu Documentation}},
 year =			{{2012-2013}},
-howpublished = {{[online] \url{https://help.ubuntu.com}}
+howpublished = {{[on-line] \url{https://help.ubuntu.com}}
 }
 
 @misc{W3C:SOAP07,
@@ -83,4 +83,9 @@ howpublished = {[on-line] \url{http://www.badaniamarketingowe.org.pl/system/atta
 @misc{Wiki:BA,
 title = {Badania ankietowe},
 howpublished = {[on-line] \url{http://pl.wikipedia.org/wiki/Badania_ankietowe}}
+}
+
+@misc{GITHUB:MoodleSoap,
+title = {SOAP Full Documented Array Plugin for Moodle},
+howpublished = {[on-line] \url{https://github.com/ghigio/moodle-webservice_soapfda}}
 }
