--- a/thesis/thesis-bachelor-polski.tex
+++ b/thesis/thesis-bachelor-polski.tex
@@ -15,6 +15,10 @@
 \usepackage{pdfpages}
 
 \hyphenation{roz-sze-rza-ją-cych}
+\hyphenation{pra-co-wni-ków}
+\hyphenation{za-ga-dnie-nia-mi}
+\hyphenation{JasperReports}
+\hyphenation{redmine}
 
 % Authors of the thesis here. Separate them with \and
 \author{%
@@ -57,7 +61,7 @@
 \cleardoublepage\appendix%
 \input{10Dodatki.tex}
 \input{11DodatkiB.tex}
-\input{12DodatkiC.tex}
+%\input{12DodatkiC.tex}
 
 % Bibliography (books, articles) starts here.
 \bibliographystyle{plain}{\raggedright\sloppy\small\bibliography{bibliography}}
