--- a/thesis/03Funkcjonalne.tex
+++ b/thesis/03Funkcjonalne.tex
@@ -1,12 +1,15 @@
 \chapter{Wymagania funkcjonalne}
 \label{Chapter3}
 
-Celem sprawnej realizacji celów warunkujących powstanie systemu \textit{iQuest}, musi on spełniać szereg wymagań funkcjonalnych. Obejmuje to m.in. tworzenie i prowadzenie (zarówno ze strony Ankietera, jak i Respondenta) Badań i Ankiet, a także analizę powstałych na ich podstawie zestawień danych. Ze względu na charakter projektu \textit{iQuest}, niezwykle ważną funkcjonalnością okazał się najbardziej podstawowy ze wszystkich mechanizmów -- logowanie do systemu. Koniecznością jest bowiem prawidłowa autoryzacja użytkowników systemu, jak też współpraca z innymi systemami Uczelni.
-
-\section{Diagram przypadków użycia}
+\section{Wstęp}
 \label{Chapter31}
 
-Na rysunku \ref{rys:UseCaseView} przedstawiono diagram przypadków użycia. W ramach systemu udostępniane są różne funkcje, możliwe do wykonania przez różnych aktorów. Dla przykładu, Ankieter może tworzyć Badania i analizować ich Statystyki oraz Raporty, podczas gdy Respondent może odpowiadać w Ankietach w ramach skierowanych do niego Badań; Administrator zarządza przydzielaniem ról; Administrator Bazy Danych zajmuje zarządza grupami Respondentów i przydzielaniem praw i zezwoleń.
+Celem sprawnej realizacji celów warunkujących powstanie systemu \textit{iQuest}, musi on spełniać szereg wymagań funkcjonalnych. Obejmuje to m.in. tworzenie i prowadzenie (zarówno ze strony Ankietera, jak i Respondenta) Badań i Ankiet, a także analizę powstałych na ich podstawie zestawień danych. Ze względu na charakter projektu \textit{iQuest}, niezwykle ważną funkcjonalnością okazał się najbardziej podstawowy ze wszystkich mechanizmów -- logowanie do systemu. Koniecznością jest bowiem prawidłowa autoryzacja użytkowników systemu, podobnie jak ich uwierzytelnianie, a także współpraca z innymi systemami Uczelni.
+
+\section{Diagram przypadków użycia}
+\label{Chapter32}
+
+Na rysunku \ref{rys:UseCaseView} przedstawiono diagram przypadków użycia. W ramach systemu udostępniane są różne funkcje, możliwe do wykonania przez różnych aktorów. Dla przykładu, Ankieter może tworzyć Badania i analizować ich Statystyki oraz Raporty, podczas gdy Respondent może odpowiadać w Ankietach w ramach skierowanych do niego Badań; Administrator zarządza przydzielaniem ról; Administrator Bazy Danych zajmuje się grupami Respondentów i przydzielaniem użytkownikom praw i zezwoleń.
 
 \begin{figure}[H]
 \centering\includegraphics[width=0.9\textwidth]{figures/UseCaseView}
@@ -14,12 +17,12 @@ Na rysunku \ref{rys:UseCaseView} przedstawiono diagram przypadków użycia. W ra
 \end{figure}
 
 \section{Ankieter}
-\label{Chapter32}
+\label{Chapter33}
 
 Poniżej przedstawiono przypadki użycia dotyczące Ankietera.
 
 \subsection{UC01: Stworzenie Ankiety}
-\label{Chapter321}
+\label{Chapter331}
 
 \ucsection{UC01: Stworzenie Ankiety}{Ankieter}
 {Ankieter jest zalogowany w Systemie i chce utworzyć Ankietę}
@@ -41,7 +44,7 @@ Poniżej przedstawiono przypadki użycia dotyczące Ankietera.
 {}
 
 \subsection{UC02: Edycja Ankiety}
-\label{Chapter322}
+\label{Chapter332}
 
 \ucsection{UC02: Edycja Ankiety}{Ankieter}
 {
@@ -63,7 +66,7 @@ Poniżej przedstawiono przypadki użycia dotyczące Ankietera.
 {}
 
 \subsection{UC03: Wybór Grupy Docelowej}
-\label{Chapter323}
+\label{Chapter333}
 
 \ucsection{UC03: Wybór Grupy Docelowej}{Ankieter, Administrator}
 {
@@ -89,7 +92,7 @@ Poniżej przedstawiono przypadki użycia dotyczące Ankietera.
 {}
 
 \subsection{UC04: Uruchomienie Badania}
-\label{Chapter324}
+\label{Chapter334}
 
 \ucsection{UC04: Uruchomienie Badania}{Ankieter, Respondent}
 {
@@ -110,7 +113,7 @@ Poniżej przedstawiono przypadki użycia dotyczące Ankietera.
 {}
 
 \subsection{UC06: Sprawdzenie wyników}
-\label{Chapter325}
+\label{Chapter335}
 
 \ucsection{UC06: Sprawdzenie wyników}{Ankieter}
 {
@@ -125,12 +128,12 @@ Poniżej przedstawiono przypadki użycia dotyczące Ankietera.
 {}
 
 \section{Respondent}
-\label{Chapter33}
+\label{Chapter34}
 
 Poniżej przedstawiono przypadki użycia dotyczące Respondenta.
 
 \subsection{UC05: Udzielenie odpowiedzi}
-\label{Chapter331}
+\label{Chapter341}
 
 \ucsection{UC05: Udzielenie odpowiedzi}{Respondent}
 {
@@ -154,12 +157,12 @@ Poniżej przedstawiono przypadki użycia dotyczące Respondenta.
 {}
 
 \section{Administrator}
-\label{Chapter34}
+\label{Chapter35}
 
 Poniżej przedstawiono przypadki użycia dotyczące Administratora.
 
 \subsection{UC07: Tworzenie Grupy Docelowej}
-\label{Chapter341}
+\label{Chapter351}
 
 \ucsection{UC07: Tworzenie Grupy Docelowej}{Administrator}
 {
@@ -180,7 +183,7 @@ Poniżej przedstawiono przypadki użycia dotyczące Administratora.
 {}
 
 \subsection{UC08: Edycja Grupy Docelowej}
-\label{Chapter342}
+\label{Chapter352}
 
 \ucsection{UC08: Edycja Grupy Docelowej}{Administrator}
 {
@@ -190,19 +193,19 @@ Poniżej przedstawiono przypadki użycia dotyczące Administratora.
 {Zmodyfikowana lista członków Grupy Docelowej}{\ucactions{
 \ucaction{1. Administrator wybiera Grupę Docelową}
 \ucaction{2. Administrator wybiera członka\slash członków Grupy Docelowej do edycji\slash usunięcia}
-\ucaction{3. Administrator dodaje\slash edytuje]\slash usuwa członka\slash członków Grupy Docelowej}
+\ucaction{3. Administrator dodaje\slash edytuje\slash usuwa członka\slash członków Grupy Docelowej}
 \ucaction{4. Administrator potwierdza chęć wprowadzenia zmian}
 \ucaction{5. System zapisuje zmiany}
 }}
 {}
 
 \section{Wszyscy Użytkownicy}
-\label{Chapter35}
+\label{Chapter36}
 
 Poniżej przedstawiono przypadki użycia dotyczące wszystkich Użytkowników.
 
 \subsection{UC09: Logowanie do Systemu}
-\label{Chapter351}
+\label{Chapter361}
 
 \ucsection{UC09: Logowanie do Systemu}{Użytkownik (Ankieter, Administrator, Respondent)}
 {Użytkownik posiada konto w Systemie i posiada poprawne dane logowania}
