--- a/thesis/05Architektura.tex
+++ b/thesis/05Architektura.tex
@@ -9,15 +9,17 @@ System \textit{iQuest} został stworzony w oparciu o model architektury trójwar
 \section{Opis ogólny architektury -- ,,Marketektura''}
 \label{Chapter52}
 
+System \textit{iQuest} to aplikacja internetowa w postaci zbioru rozszerzeń platformy e-learningowej \textit{Moodle}. Całość (\textit{Moodle} oraz rozszrzenia) zainstalowana jest na serwerze www, zlokalizowanym w sieci Politechniki Poznańskiej, łączącym się z osobnym serwerem baz danych oraz usługami \textit{eKonto} i \textit{eDziekanat}. Funkcje raportowania realizowane są w głównej mierze za pośrednictwem zewnętrznego systemu \textit{BI}, pobierającego dane z \textit{iQuest} za pośrednictwem usług sieciowych (ang.~\definicja{webservices}). Administracja oraz obsługa systemu odbywa się za pośrednictwem przeglądarki internetowej, w ramach połączenia z platformą \textit{Moodle} lub serwerem raportowania. Respondenci mogą też uzyskać dostęp do systemu przy pomocy urządzeń mobilnych, takich jak tablety czy smartfony.
+
 \begin{figure}[H]
 \centering\includegraphics[width=0.9\textwidth]{figures/marketecture}
 \caption{Diagram ,,Marketektury''}\label{rys:marketecture}
 \end{figure}
 
-System \textit{iQuest} to aplikacja internetowa w postaci zbioru rozszerzeń platformy e-learningowej \textit{Moodle}. Całość (\textit{Moodle} oraz rozszrzenia) zainstalowana jest na serwerze www, zlokalizowanym w sieci Politechniki Poznańskiej, łączącym się z osobnym serwerem baz danych oraz usługami \textit{eKonto} i \textit{eDziekanat}. Funkcje raportowania realizowane są w głównej mierze za pośrednictwem zewnętrznego systemu \textit{BI}, pobierającego dane z \textit{iQuest} za pośrednictwem usług sieciowych (en.~\definicja{webservices}). Administracja oraz obsługa systemu odbywa się za pośrednictwem przeglądarki internetowej, w ramach połączenia z platformą \textit{Moodle} lub serwerem raportowania. Respondenci mogą też uzyskać dostęp do systemu przy pomocy urządzeń mobilnych, takich jak tablety czy smartfony.
-
 \section{Analiza~podejść\slash Analiza~SWOT}
 \label{Chapter53}
+
+W fazie inicjacji projektu, zespół zarządzający przeprowadził analizę SWOT (ang. \definicja{Strengths, Weaknesses, Opportunities, Threats} - mocne strony, słabe strony, szanse, zagrożenia). Poniżej zamieszczono tabele \ref{tab:SWOT1}. oraz \ref{tab:SWOT2}., zawierające jej wyniki. W oparciu o nie, zespół zarządzający podjął decyzję o realizacji projektu z użyciem platformy \textit{Moodle}.
 
 \begin{table}[H]
 \centering
@@ -25,7 +27,7 @@ System \textit{iQuest} to aplikacja internetowa w postaci zbioru rozszerzeń pla
 \hline
 --- & \textbf{Pozytywne} & \textbf{Negatywne} \\ \hline
 \multirow{6}{*}{\textbf{Wewnętrzne}} & \textbf{Mocne strony (S)} & \textbf{Słabe strony (W)} \\
-			& Środowisko \textit{Moodle} jest dobrze udokumentowane. & Konieczność trzymania się standardów \textit{Moodle}. \\
+			& Środowisko \textit{Moodle} jest dobrze udokumentowane\cite{Man:Moodle}. & Konieczność trzymania się standardów \textit{Moodle}. \\
 			& Środowisko \textit{Moodle} jest łatwe w rozwoju. & Konieczność wdrożenia się w nieznany kod. \\
 			& Stosowanie podejścia MVC w środowisku \textit{Moodle}. & \\
 			& Już zaimplementowane mechanizmy, takie jak kontrola praw dostępu, CMS. & \\
@@ -53,7 +55,7 @@ System \textit{iQuest} to aplikacja internetowa w postaci zbioru rozszerzeń pla
 \caption{Podejście drugie -- napisanie aplikacji od podstaw przy użyciu \textit{Java~EE}}\label{tab:SWOT2}
 \end{table}
 
-W oparciu o analizy SWOT przedstawione w tabelach \ref{tab:SWOT1}. i \ref{tab:SWOT2}., zespół zarządzający zarządził o realizacji projektu z użyciem platformy \textit{Moodle}.
+Rozpatrując powyższe tabele z perspektywy czasu, autorzy niniejszej pracy stwierdzili, iż analiza SWOT została zrealizowana nieprawidłowo, faworyzując rozwiązanie z użyciem systemu \textit{Moodle}. Dla przykładu, dokumentacja \textit{Moodle} okazała się być w znacznym stopniu nieprecyzyjna i niekompletna, zaś w kodzie platformy nie stosuje się podejścia MVC.
 
 \section{Perspektywy architektoniczne}
 \label{Chapter54}
@@ -80,7 +82,7 @@ Schemat \ref{rys:PerspektywaLogiczna} prezentuje perspektywę logiczną systemu.
 
 \subsubsection{iQuest Survey Activity Plugin}
 \label{Chapter5421}
-Funkcjonalnością \definicja{Activity Plugin}ów jest udostępnianie możliwości dodania nowych rodzajów tzw. ,,aktywności'' w ramach platformy \textit{Moodle}. \textit{iQuest Survey Activity Plugin} pozwala na dodanie nowego Badania \textit{iQuest}. Komponent ten składa się z dwóch subkomponentów:
+Funkcjonalnością \definicja{Activity Plugin} jest udostępnianie możliwości dodania nowych rodzajów tzw. ,,aktywności'' w ramach platformy \textit{Moodle}. \textit{iQuest Survey Activity Plugin} pozwala na dodanie nowego badania \textit{iQuest}. Komponent ten składa się z dwóch subkomponentów:
 \begin{itemize}
 \item{Survey Creator}
 \item{Survey Runner}
@@ -90,7 +92,7 @@ Pierwszy z nich odpowiada za definiowanie ankiet, natomiast drugi za ich realiza
 \subsubsection{iQuest Course Format Plugin}
 \label{Chapter5422}
 
-\definicja{Course Format Plugin} dla platformy \textit{Moodle} odpowiada za obsługę interfejsu użytkownika. W przypadku systemu \textit{iQuest}, zarządza kwestią wyświetlania użytkownikowi tylko tych składowych kursu "iQuest", które są dla niego dostępne. Przykładowo, Respondent uzyska dostęp do listy ankiet, które może wypełnić, podczas gdy ankieter uzyska dostęp do listy zarządzanych przez niego badań.
+\definicja{Course Format Plugin} dla platformy \textit{Moodle} odpowiada za obsługę interfejsu użytkownika. W przypadku systemu \textit{iQuest}, zarządza kwestią wyświetlania użytkownikowi tylko tych składowych kursu związanego z systemem \textit{iQuest}, które są dla niego dostępne. Przykładowo, Respondent uzyska dostęp do listy ankiet, które może wypełnić, podczas gdy ankieter uzyska dostęp do listy zarządzanych przez niego badań.
 
 \subsubsection{eDziekanat Connector oraz ePoczta Connector}
 \label{Chapter5423}
@@ -116,16 +118,6 @@ Dzięki temu komponentowi możliwe jest szeregowanie oraz wykonywanie zadań w t
 \end{figure}
 
 Diagram perspektywy implementacyjnej (rys.~\ref{rys:PerspektywaImplementacyjna}) pozwala na analizę przeplatania się elementów systemu \textit{iQuest} w ramach poszczególnych warstw zastosowanego modelu trójwarstwowego. Funkcje zaprezentowanych na nim modułów zostały wyjaśnione już wcześniej w niniejszym dokumencie.
-
-\subsection{Perspektywa procesu (równoległości)}
-\label{Chapter544}
-
-\begin{figure}[H]
-\centering\includegraphics[width=0.9\textwidth]{figures/ProcessView}
-\caption{Diagram perspektywy procesu}\label{rys:PerspektywaProcesu}
-\end{figure}
-
-Jak widać na diagramie \ref{rys:PerspektywaProcesu}, istnieje możliwość jednoczesnego wysyłania e-maili i wykonywania w systemie operacji na ankietach, badaniach, raportach oraz grupach docelowych przez różnych użytkowników w tym samym czasie.
 
 \section{Decyzje projektowe}
 \label{Chapter55}
@@ -191,7 +183,7 @@ Uzasadnienie & Jest to zgodne z ideą \textit{Moodle'a} -- treści umieszczane n
 %
 Identyfikator & D04 \\ \hline
 Nazwa & Wtyczka \textit{iQuest Course Format Plugin}  \\ \hline
-Opis & \textit{iQuest Course Format Plugin} odpowiada za prezentowanie treści wewnątrz "kursu" \textit{iQuest}. Plugin dba o to, aby ankieterowi wyświetlała się lista tylko tych badań, do których ma on uprawnienia oraz żeby respondent widział listę tylko tych badań, w których ma on prawo wypełnić ankietę. \\ \hline
+Opis & \textit{iQuest Course Format Plugin} odpowiada za prezentowanie treści wewnątrz kursu, w ramach którego funkcjonuje system \textit{iQuest}. Plugin dba o to, aby ankieterowi wyświetlała się lista tylko tych badań, do których ma on uprawnienia oraz żeby respondent widział listę tylko tych badań, w których ma on prawo wypełnić ankietę. \\ \hline
 Uzasadnienie & Istnienie takiej wtyczki jest wymagane, ponieważ bez niej nie byłoby możliwe filtrowanie listy badań tak, aby użytkownik wydział tylko te do których ma uprawnienia. \\ \hline
 Źródło & Architekt \\ \hline
 %
@@ -929,4 +921,12 @@ Uzasadnienie & Jest bardzo mała szansa, że na Uczelni pojawi się potrzeba prz
 \section{Schemat bazy danych}
 \label{Chapter56}
 
-Schemat bazy danych, ze względu na objętość, zamieszczono w dodatku C.
+Ze względu na obszerność, schemat bazy danych przedstawiono na następnej stronie.
+
+\newpage
+\begin{landscape}
+\begin{figure}[th]
+\centering\includegraphics[height=\textheight, width=1.5\textwidth]{figures/iQuest_Database}
+\caption{Diagram Bazy Danych}\label{rys:iQuest_DataBase}
+\end{figure}
+\end{landscape}
