--- a/thesis/06-3-Interfejs-KU.tex
+++ b/thesis/06-3-Interfejs-KU.tex
@@ -1,15 +1,10 @@
-%W ramach systemu iQuest, elementy interfejsu ułożone są według następującego schematu:
-%\begin{description}
-%\item Na ekranie wyświetlana jest lista sekcji.
-%\item Wewnątrz każdej sekcji znajduje się lista badań. Pod nią prezentowana jest lista dostępnych materiałów.
-%\end{description}
-
 \section{Interfejs}
 \label{Chapter65}
 
 W trakcie projektowania graficznego interfejsu użytkownika, głównym problemem okazał się wybór odpowiedniego narzędzia. Celem jaki postawiono, była maksymalna zgodność tworzonych elementów z różnymi wersjami \textit{Moodle} -- zarówno wcześniejszymi, jak i późniejszymi. Zdecydowano, aby starać się korzystać z gotowych interfejsów programowania aplikacji \textit{(API)} dostarczonych przez \textit{Moodle}, tj. \textit{Page API}, \textit{Form API}, oraz \textit{Access API}. Wszystkie interfejsy zostały napisane przy użyciu języka \textit{PHP} -- są wykonywane po stronie serwera. Konieczne okazało się też wykonanie niektórych skryptów po stronie klienta. Dlatego w projekcie wykorzystano również język skryptowy \textit{Java Script}.
 
 \subsection{Bezpieczeństwo}
+\label{Chapter651}
 
 Potencjalnie, z systemu może korzystać wielu użytkowników, zarówno studentów jak i pracowników. Każda z tych osób może być uprawniona do wykonywania innych czynności w systemie, niezależnie od siebie. Wiąże się to z jednej strony z uwierzytelnianiem użytkowników, zaś z drugiej -- ich autoryzacją. Odbywa się to za pomocą wbudowanego w \textit{Moodle} mechanizmu ról. \\
 
